--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
@@ -51,10 +51,23 @@
                         break;
                     case AttributeControlType.RadioList:
                         {
-                            //codehint: sm-edit begin
                             foreach (var pvaValue in attribute.Values)
                             {
-                                <label for="@(controlId)_@(pvaValue.Id)" class="radio">
+                                if (pvaValue.ImageUrl.HasValue())
+                                {
+                                    if (!String.IsNullOrEmpty(pvaValue.SeName))
+                                    { 
+                                        <a href="@Url.RouteUrl("Product", new { SeName = pvaValue.SeName })" class="attribute-value-image-checkbox">
+                                            <img src="@(pvaValue.ImageUrl)" />
+                                        </a>
+                                    }
+                                    else
+                                    {
+                                        <img src="@(pvaValue.ImageUrl)" class="attribute-value-image-checkbox" />
+                                    }
+                                }
+
+                                <label for="@(controlId)_@(pvaValue.Id)" class="radio @(pvaValue.ImageUrl.HasValue() ? "image-has-value" : "")">
 									<input id="@(controlId)_@(pvaValue.Id)" type="radio" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected"@(Html.Raw(disabled)) />
                                         @(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())
                                 </label>
@@ -65,13 +78,26 @@
                     case AttributeControlType.Checkboxes:
                         {
                             foreach (var pvaValue in attribute.Values)
-                            {       
-                                <label for="@(controlId)_@(pvaValue.Id)" class="checkbox">                             
-									<input id="@(controlId)_@(pvaValue.Id)" type="checkbox" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected"@(Html.Raw(disabled)) />
-                                        @(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())
+                            {
+                                if (pvaValue.ImageUrl.HasValue())
+                                {
+                                    if (!String.IsNullOrEmpty(pvaValue.SeName))
+                                    { 
+                                        <a href="@Url.RouteUrl("Product", new { SeName = pvaValue.SeName })" class="attribute-value-image-checkbox">
+                                            <img src="@(pvaValue.ImageUrl)" />
+                                        </a>
+                                    }
+                                    else
+                                    {
+                                        <img src="@(pvaValue.ImageUrl)" class="attribute-value-image-checkbox" />
+                                    }
+                                }
+                                
+                                <label for="@(controlId)_@(pvaValue.Id)" class="checkbox @(pvaValue.ImageUrl.HasValue() ? "image-has-value" : "")">
+                                    <input id="@(controlId)_@(pvaValue.Id)" type="checkbox" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected" @(Html.Raw(disabled)) />
+                                    @(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())
                                 </label>
                             }
-                            //codehint: sm-edit end
                         }
                         break;
                     case AttributeControlType.TextBox:
