--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
@@ -1,7 +1,5 @@
 ﻿@model MiniShoppingCartModel
 @using SmartStore.Web.Models.ShoppingCart;
-
-@*codehint: sm-edit *@
 @{
     int attrMaxLength = Model.ShowProductImages ? 50 : 70;
 }
@@ -30,6 +28,7 @@
                 }
                 
                 <li class="@itemClass">
+
                     @if (Model.ShowProductImages)
                     {
                         <figure class="picture pull-left">
@@ -45,7 +44,7 @@
                         <a class="name" href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" title="@item.ProductName">@item.ProductName</a>
                         @if (item.AttributeInfo.HasValue())
                         {
-                            <br />    
+                            <br />
                             <span class="attributes muted" title="@item.AttributeInfo">
                                 @Html.Raw(item.AttributeInfo.Truncate(attrMaxLength))
                             </span>
@@ -54,15 +53,36 @@
                     <div class="price pull-right">
                         @item.UnitPrice
                     </div>
-                    <a class="remove ajax-cart-link" 
+                    <a class="remove ajax-cart-link"
                         href="#"
-                        data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })' 
+                        data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
                         data-name="@item.ProductName"
                         data-type="cart"
-                        data-action="remove" 
+                        data-action="remove"
                         title='@T("Common.Remove")'>
                         <i class="icon-trash"></i>
                     </a>
+
+                    @if (item.BundleItems.Count > 0)
+                    {
+                        <div class="mb-bundle-pictures">
+                            @for (int j = 0, bundlelength = item.BundleItems.Count; j < bundlelength; j++)
+                            {
+                                var bundleItem = item.BundleItems[j];
+
+                                <a href="@Url.RouteUrl("Product", new { SeName = bundleItem.ProductSeName })" title="@bundleItem.ProductName">
+                                    <img alt="@bundleItem.ProductName" src="@bundleItem.PictureUrl" title="@bundleItem.ProductName" />
+                                </a>
+                                
+                                if (bundlelength != (j + 1)) 
+                                { 
+                                    <i class="icon-plus"></i>
+                                }
+                                
+                            }        
+                        </div>
+                    }
+                    
                 </li>
             }
             @if (Model.IgnoredProductsCount > 0)
