#292 Allow specific price for attribute combinations

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
@@ -164,6 +164,7 @@
                             .Centered()
                             .ClientTemplate("<a href=\"<#= ProductUrl #>\" target=\"_blank\"><#= ProductUrlTitle #></a>");
                         columns.Bound(x => x.Sku);
+						columns.Bound(x => x.Price);
                         columns.Bound(x => x.StockQuantity)
                             .Width(160)
                             .Centered();
