--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
@@ -2,28 +2,36 @@
 @using SmartStore.Admin.Models.ContentSlider
 @using Telerik.Web.Mvc.UI
 @{
-    //page title
     ViewBag.Title = T("Admin.Configuration.ContentSlider").Text;
 }
 
 @using (Html.BeginForm())
 {
-<div class="section-header">
-    <div class="title">
-        <i class="icon icon-picture"></i>
-        @T("Admin.Configuration.ContentSlider")
-    </div>
-    <div class="options">
-        <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
-    </div>
-</div>
+	<div class="section-header">
+		<div class="title">
+			<i class="icon icon-picture"></i>
+			@T("Admin.Configuration.ContentSlider")
+		</div>
+		<div class="options">
+			<button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
+		</div>
+	</div>
 
     <script type="text/javascript">
-        $(function () {
-            $("#@Html.FieldIdFor(model => model.AutoPlay)").click(toggleAutoPlayDelay);
-            
-            toggleAutoPlayDelay();
-        });
+
+		$(document).ready(function () {
+
+			$('#search-slides').click(function () {
+				var grid = $('#content-slider-slides-grid').data('tGrid');
+				grid.currentPage = 1;
+				grid.ajaxRequest();
+				return false;
+			});
+
+			$("#@Html.FieldIdFor(model => model.AutoPlay)").click(toggleAutoPlayDelay);
+
+			toggleAutoPlayDelay();
+		});
 
         function toggleAutoPlayDelay() {
             if ($('#@Html.FieldIdFor(model => model.AutoPlay)').is(':checked')) {
@@ -33,6 +41,13 @@
                 $('#autoplaydelay').hide();
             }
         }
+
+		function slidesGrid_onDataBinding(e) {
+			var searchModel = {
+				SearchStoreId: $('#SearchStoreId').val()
+			};
+			e.data = searchModel;
+		}
     </script>
     
     <table class="adminContent">
@@ -91,47 +106,75 @@
             </td>
         </tr>
     </table>
-}
 
-<div class="slides-title">
-    <div class="headline">
-        @T("Admin.Configuration.ContentSlider.Slides")
-    </div>
-</div>
+	<div class="slides-title">
+		<div class="headline">
+			@T("Admin.Configuration.ContentSlider.Slides")
+		</div>
+	</div>
 
-<div class="pull-right" style="margin-bottom:10px">
-    <a href="@Url.Action("CreateSlide")" class="btn btn-primary">
-        <i class="icon-plus"></i>
-        @T("Admin.Common.AddNew")
-    </a>
-</div>
+	<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchStoreId)
+			</td>
+			<td class="adminData">
+				@Html.DropDownList("SearchStoreId", Model.AvailableStores)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
+				<button type="submit" id="search-slides" value="search-slides" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
+			</td>
+		</tr>
+	</table>
 
-<table class="adminContent">
-    <tr>
-        <td>
-            @(Html.Telerik().Grid<ContentSliderSlideModel>(Model.Slides.OrderBy(s => s.LanguageName).ThenBy(s => s.DisplayOrder))
-                    .Name("content-slider-slides-grid")
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.Title)
-							.Template(x => Html.ActionLink(x.Title, "EditSlide", new { index = x.SlideIndex }));
-                        columns.Bound(x => x.DisplayOrder)
-                            .Centered();
-                        columns.Bound(x => x.LanguageName)
-                            .Centered();
+	<div class="pull-right">
+		<a href="@Url.Action("CreateSlide")" class="btn btn-primary btn-above">
+			<i class="icon-plus"></i>
+			@T("Admin.Common.AddNew")
+		</a>
+	</div>
+
+	<table class="adminContent">
+		<tr>
+			<td>
+				@(Html.Telerik().Grid<ContentSliderSlideModel>(Model.Slides.OrderBy(s => s.LanguageName).ThenBy(s => s.DisplayOrder))
+					.Name("content-slider-slides-grid")
+					.Columns(columns =>
+					{
+						columns.Bound(x => x.Title)
+							.Template(x => Html.ActionLink(x.Title, "EditSlide", new { index = x.SlideIndex }))
+							.ClientTemplate("<a href=\"ContentSlider/EditSlide?index=<#= SlideIndex #>\"><#= Title #></a>");
+						columns.Bound(x => x.DisplayOrder)
+							.Centered();
+						columns.Bound(x => x.LanguageName)
+							.Centered();
 						columns.Bound(x => x.LimitedToStores)
-							.Centered();						
-                        columns.Bound(x => x.Published)
-                            .Centered();
-                    })     
-               )
-        </td>
-    </tr>
-</table>
-
-<div class="pull-right" style="margin-top:10px">
-    <a href="@Url.Action("CreateSlide")" class="btn btn-primary">
-        <i class="icon-plus"></i>
-        @T("Admin.Common.AddNew")
-    </a>
-</div>
+							.Width(100)
+							.Template(x => @Html.SymbolForBool(x.LimitedToStores))
+							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
+							.Centered();
+						columns.Bound(x => x.Published)
+							.Width(100)
+							.Template(x => @Html.SymbolForBool(x.Published))
+							.ClientTemplate(@Html.SymbolForBool("Published"))
+							.Centered();
+					})
+					.DataBinding(dataBinding => dataBinding.Ajax().Select("SlideList", "ContentSlider"))
+					.ClientEvents(events => events.OnDataBinding("slidesGrid_onDataBinding"))
+					.EnableCustomBinding(true))
+			</td>
+		</tr>
+	</table>
+	
+	<div class="pull-right">
+		<a href="@Url.Action("CreateSlide")" class="btn btn-primary btn-below">
+			<i class="icon-plus"></i>
+			@T("Admin.Common.AddNew")
+		</a>
+	</div>
+}
