--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.SummerNote.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.SummerNote.cshtml
@@ -12,7 +12,9 @@
         "//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.min.js",
         "//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/mode/xml/xml.min.js",
         "//cdnjs.cloudflare.com/ajax/libs/codemirror/2.36.0/formatting.min.js",
-        "~/Content/editors/summernote/summernote.js");
+        "~/Content/editors/summernote/summernote.js",
+		"~/Content/editors/summernote/globalinit.js");
+		
     if (lang != "en-US")
     {
         Html.AddScriptParts(true, "~/Content/editors/summernote/langs/summernote-{0}.js".FormatInvariant(lang));
@@ -22,21 +24,23 @@
         "//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.min.css",
         "~/Content/editors/summernote/summernote.css");
 }
+
 <script type="text/javascript">
-
     $(function () {
-        $('#@ViewData.TemplateInfo.GetFullHtmlFieldId(string.Empty)').summernote({
-            //height: 300,
-            lang: '@lang',
-            codemirror: {
-                theme: 'default'
-            }
-        });
+    	summernote_image_upload_url = '@Url.Action("UploadImageAjax", "Media")';
+    	$('#@ViewData.TemplateInfo.GetFullHtmlFieldId(string.Empty)').summernote(
+			$.extend(
+				true,
+				{},
+				summernote_global_config, {
+					lang: '@lang'
+				}
+			)
+		);
     });
-
 </script>
 
 @Html.TextArea(string.Empty, /* Name suffix */
                (string)ViewData.TemplateInfo.FormattedModelValue, /* Initial value */
-               new { @class = "summernote-editor" }
+               new { @class = "summernote-editor", data_upload_url = Url.Action("UploadImageAjax", "Media") }
 )
