Bugfix for stock issue in product variant combinations

--- a/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsOne.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsOne.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Root.cshtml";
-    Html.AddBodyCssClass("lyt-cols-1"); // codehint: sm-add
+    Html.AddBodyCssClass("lyt-cols-1");
 }
 
 @section teaser {
