--- a/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsThree.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsThree.cshtml
@@ -1,14 +1,12 @@
 ﻿@{
     Layout = "~/Views/Shared/_Root.cshtml";
-    Html.AddBodyCssClass("lyt-cols-3"); // codehint: sm-add
+    Html.AddBodyCssClass("lyt-cols-3");
 
     string[] spanWidths = GetThemeVariable<string>("GridSettings", "5/14/5").Split('/');
 }
 @section teaser {
   @RenderSection("teaser", required: false)
 }
-
-@* codehint: sm-delete *@
 
 <div id="content-left" class="span@(spanWidths[0])">
     @if (IsSectionDefined("left"))
