--- a/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsTwo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsTwo.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_Root.cshtml";
-    Html.AddBodyCssClass("lyt-cols-2"); // codehint: sm-add
+    Html.AddBodyCssClass("lyt-cols-2");
     string[] spanWidths = GetThemeVariable<string>("GridSettings", "5/14/5").Split('/');
 }
-
-@* codehint: sm-delete *@
 
 @section teaser {
     @RenderSection("teaser", required: false)
