#336 Product bundle: Upper add-to-cart button label shows wrong text

--- a/src/Presentation/SmartStore.Web/Content/theme.common.less
+++ b/src/Presentation/SmartStore.Web/Content/theme.common.less
@@ -928,8 +928,10 @@ fieldset > legend {
     max-height: 24px;
 }
 .bundle-item-overview-headline {
+	margin-bottom: 14px;
+
     .you-save {
-        margin-right: 130px;
+        padding-right: 180px;
     }
 
     .bundle-item-price,
