--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItemsAddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItemsAddToCart.cshtml
@@ -4,7 +4,6 @@
 @using System.Globalization;
 @using System.Text.RegularExpressions;
 
-
 <div class="bundle-item-overview-headline clearfix">
     
     <div class="add-to-cart line">
@@ -34,12 +33,19 @@
         </div>
     </div>
 
-    <div class="you-save">
-        @Html.Raw(T("Products.Bundle.YouSave", 
-            "<span class=\"bundle-item-price\">" + Model.ProductPrice.PriceWithDiscount + "</span>", 
-            "<span class=\"bundle-item-price-single-units\">" + Model.ProductPrice.Price + "</span>"))
+    <div class="you-save price-block">
+		@if (Model.ProductPrice.PriceWithDiscount.IsNullOrEmpty())
+		{
+			@Html.Raw(T("Products.Bundle.YouSaveWithoutDiscount",
+					 "<span class=\"bundle-item-price product-price-without-discount\">" + Model.ProductPrice.Price + "</span>"));
+		}
+		else
+		{
+			@Html.Raw(T("Products.Bundle.YouSave",
+					 "<span class=\"bundle-item-price product-price-with-discount\">" + Model.ProductPrice.PriceWithDiscount + "</span>",
+					 "<span class=\"bundle-item-price-single-units product-price-without-discount\">" + Model.ProductPrice.Price + "</span>"));
+		}
     </div>
-
 </div>
 
 <div class="bundle-item-overview">
@@ -55,8 +61,8 @@
         if (item.VisibleIndividually)
         {
             <a href="@Url.RouteUrl("Product", new { SeName = item.SeName })" title="@T("Products.Details")">
-                <img alt="@item.Name" src="@item.DetailsPictureModel.DefaultPictureModel.ThumbImageUrl" title="@item.Name" />
-            </a>
+                <img alt="@item.Name" src="@item.DetailsPictureModel.DefaultPictureModel.ThumbImageUrl" title="@item.Name" /></a>
+			@* img and a in same line cause of hover underlines *@
         }
         else
         {
