--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -186,7 +186,7 @@
 				&nbsp;
                 @if (Model.CanCancelOrder)
                 {
-                    <button type="submit" name="cancelorder" id="cancelorder" class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+                    <button type="submit" name="cancelorder" id="cancelorder" class="btn btn-danger" value="@T("Admin.Orders.Fields.OrderStatus.Cancel")" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
 						<i class="icon-remove"></i>&nbsp;@T("Admin.Orders.Fields.OrderStatus.Cancel")
 					</button>
                 }
@@ -612,7 +612,7 @@
                 <button type="submit" name="btnEditOrderTotals" onclick="toggleOrderTotals(true);return false;" id="btnEditOrderTotals" class="btn" style="margin-top:5px;">
 					<i class="icon-edit"></i>&nbsp;@T("Admin.Orders.Fields.EditOrderTotals")
 				</button>
-                <button type="submit" name="btnSaveOrderTotals" id="btnSaveOrderTotals" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+                <button type="submit" name="btnSaveOrderTotals" id="btnSaveOrderTotals" class="btn" value="@T("Admin.Orders.Fields.SaveOrderTotals")" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
 					<i class="icon-ok"></i>&nbsp;@T("Admin.Orders.Fields.SaveOrderTotals")
 				</button>
                 <button type="submit" name="btnCancelOrderTotals" onclick="toggleOrderTotals(false);return false;" id="btnCancelOrderTotals" class="btn">
@@ -1313,7 +1313,7 @@
         {
             <tr>
                 <td>
-                    <button type="submit" id="btnAddNewShipment" name="btnAddNewShipment" class="btn btn-below"
+                    <button type="submit" id="btnAddNewShipment" name="btnAddNewShipment" class="btn btn-below" value="@T("Admin.Orders.Shipments.AddNew")"
 						onclick="javascript:setLocation('@(Url.Action("AddShipment", "Order", new { orderId = Model.Id }))'); return false;">
 						<i class="icon-plus"></i>&nbsp;@T("Admin.Orders.Shipments.AddNew")
 					</button>
@@ -1711,7 +1711,7 @@
         }
         <tr>
             <td>
-                <button type="submit" id="btnAddNewProduct" name="btnAddNewProduct" class="btn btn-below"
+                <button type="submit" id="btnAddNewProduct" name="btnAddNewProduct" class="btn btn-below" value="@T("Admin.Orders.Products.AddNew")"
 						onclick="javascript:setLocation('@(Url.Action("AddProductToOrder", "Order", new { orderId = Model.Id }))'); return false;">
 					<i class="icon-plus"></i>&nbsp;@T("Admin.Orders.Products.AddNew")
 				</button>
