Default value for plugin description not loaded into edit popup window

--- a/src/Presentation/SmartStore.Web/Views/Checkout/OpcPaymentMethods.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/OpcPaymentMethods.cshtml
@@ -66,7 +66,7 @@
                             }
                         </div>
                         <div class="option-name">
-                            <label for="paymentmethod_@(i)" class="radio x-pull-left">
+                            <label for="paymentmethod_@(i)" class="radio">
                                 <input id="paymentmethod_@(i)" type="radio" name="paymentmethod" value="@(paymentMethod.PaymentMethodSystemName)" checked="@paymentMethod.Selected" />
                                 @paymentMethod.Name
                             </label>
