--- a/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.cshtml
@@ -83,7 +83,7 @@
                                     }
                                 </div>
                                 <div class="option-name">
-                                    <label for="paymentmethod_@(i)" class="radio pull-left">
+                                    <label for="paymentmethod_@(i)" class="radio">
                                         <input id="paymentmethod_@(i)" type="radio" name="paymentmethod" value="@(paymentMethod.PaymentMethodSystemName)" checked="@paymentMethod.Selected" />
                                         <span class="payment-method-name">@paymentMethod.Name</span>
                                     </label>
