--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1093,6 +1093,7 @@ table.cart .cart-item-row .qty-input {
 
 	.payment-method-desc {
 		display: inline-block;
+		clear: left;
 	}
 }
 .shipping-option-item.odd,
