Mobile: don't let Bundler decide which script version to take, specify it.

--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -8,7 +8,7 @@
         "~/Scripts/jquery-{version}.js",
         "~/Scripts/jquery.validate.js",
         "~/Scripts/jquery.validate.unobtrusive.js",
-        "~/Scripts/jquery.mobile-{version}.js"); 
+        "~/Scripts/jquery.mobile-1.3.2.js"); 
 }
 
 <!DOCTYPE html>
