--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
@@ -3,6 +3,7 @@
 
 @{    
     ViewBag.Title = string.Format(T("Admin.Configuration.Themes.Title"), Model.ThemeName);
+	string parsingError = (string)TempData["LessParsingError"];
 }
 
 @using (Html.BeginForm())
@@ -48,6 +49,14 @@
         </div>
     </div>
 
+	if (parsingError.HasValue())
+	{
+		<h4 class="text-error">@T("Admin.Configuration.Themes.Validation.ErrorReportTitle")</h4>
+		<pre>
+			@parsingError
+		</pre>		
+	}
+	
     @Html.Action("ConfigureTheme", "Theme", new { theme = Model.ThemeName, storeId = Model.StoreId, area = (string)null, selectedTab = ViewData["SelectedTab"] })
 }
 
