--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
@@ -51,10 +51,15 @@
 
 	if (parsingError.HasValue())
 	{
-		<h4 class="text-error">@T("Admin.Configuration.Themes.Validation.ErrorReportTitle")</h4>
-		<pre>
-			@parsingError
-		</pre>		
+		<div style="margin-bottom: 20px">
+			<h4 class="text-error">@T("Admin.Configuration.Themes.Validation.ErrorReportTitle")</h4>
+			<pre>
+				@parsingError
+			</pre>
+			<a class="btn" href='@Url.Action("Configure", new { theme = Model.ThemeName, storeId = Model.StoreId, selectedTab = ViewData["SelectedTab"] })'>
+				@T("Admin.Configuration.Themes.Validation.RestorePrevValues")
+			</a>	
+		</div>
 	}
 	
     @Html.Action("ConfigureTheme", "Theme", new { theme = Model.ThemeName, storeId = Model.StoreId, area = (string)null, selectedTab = ViewData["SelectedTab"] })
