--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -7,8 +7,7 @@
     Html.AppendScriptParts(ResourceLocation.Head,
         "~/Scripts/jquery-{version}.js",
         "~/Scripts/jquery.validate.js",
-        "~/Scripts/jquery.validate.unobtrusive.js",
-        "~/Scripts/jquery.mobile-{version}.js"); 
+        "~/Scripts/jquery.validate.unobtrusive.js"); 
 }
 
 <!DOCTYPE html>
@@ -31,9 +30,11 @@
     <script type="text/javascript">
         $(document).bind("mobileinit", function () {
             $.mobile.ajaxEnabled = false;
-            $.mobile.hashListeningEnabled = false;
         });
     </script>
+    
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.mobile-1.3.2.js")"></script>
+
 </head>
 <body>
     @RenderBody()
