--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -59,6 +59,7 @@
         "~/Scripts/jquery.addeasing.js",
         "~/Scripts/smartstore.eventbroker.js",
         "~/Scripts/smartstore.hacks.js",
+		"~/Scripts/smartstore.common.js",
         // Bootstrap
         bootstrapJsRoot + "bootstrap-transition.js",
         bootstrapJsRoot + "bootstrap-alert.js",
