--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -2559,7 +2559,7 @@ table.cart .cart-item-row .qty-input {
 
 .checkout-confirm-page .order-summary-content form {
     border: 1px solid #bbb;
-    /*background: #efefef;*/
+    background: #efefef;
     border-bottom: none;
     margin: 0 !important;
     padding-bottom: 20px;
@@ -2567,7 +2567,7 @@ table.cart .cart-item-row .qty-input {
 }
 .checkout-confirm-page .checkout-data > .confirm-order {
     border: 1px solid #bbb;
-    /*background: #efefef;*/
+    background: #efefef;
     border-top: none;
     padding: 20px;
     margin-bottom: 30px;
