--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -28,7 +28,7 @@
     @* scripts (head) *@
     <script src='~/Scripts/modernizr-2.7.1.js' type='text/javascript'></script>
     <script src='~/Scripts/jquery-1.8.3.min.js' type='text/javascript'></script>
-
+    <script src='~/Scripts/smartstore.common.js' type='text/javascript'></script>
 </head>
 <body class="container-main">
 
@@ -425,7 +425,7 @@
 
                     if (data.Success) {
                     	$("#install-message").html("@ILS.GetResource("Common.StartShop")");
-                    	$("#install-progress").html("");
+                        $("#install-progress").html("");
                         setLocation(data.RedirectUrl);
                     }
                     else {
