Removed checkbox.less (was applied only in Chrome anyway)

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -254,6 +254,11 @@ td.adminData {
     }
 }
 
+td.adminData > input[type="radio"], 
+td.adminData > input[type="checkbox"] {
+	margin-top: -1px;
+}
+
 
 /* "select2" ui tweaks for admin
 -------------------------------------------------------------- */
