Added info text for product bulk edit

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
@@ -17,6 +17,10 @@
         </div>
     </div>
     
+    <div class="alert alert-info">
+        @T("Admin.Catalog.BulkEdit.Info")
+    </div>
+    
     <table width="100%">
         <tr>
             <td class="adminTitle">
