Fixed missing ellipsis on truncated text

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -68,7 +68,8 @@
 					{
 						<li>
 							<a href="@store.Url" title="@T("Admin.Header.PublicStore") - @store.Name">
-								<i class="icon-globe"></i>&nbsp;@store.Name.Truncate(32)
+								<i class="icon-globe"></i>
+								@store.Name.Truncate(32, "...")
 							</a>
 						</li>
 					}
