--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItems.cshtml
@@ -35,7 +35,7 @@
 			@if (!String.IsNullOrWhiteSpace(item.ShortDescription))
 			{
                 <div class="bundle-item-description" title="@(item.ShortDescription.Length < 170 ? "" : item.ShortDescription)">
-                    @Html.Raw(item.ShortDescription.Truncate(170))
+                    @Html.Raw(item.ShortDescription.Truncate(170, "..."))
                     @if (item.ShortDescription.Length > 170) { <text>...</text> }
                 </div>
 			}
